Update tuoleng info

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -5,7 +5,7 @@ tuo leng:
     webpage: "https://ai.shu.edu.cn/info/1114/1224.htm"
     role: pi
     image: img/people/tuoleng.jpeg
-    bio: Associate Professor of Artificial Intelligence Institute
+    bio: Associate Professor of School of computer engineer and science/School of artificial intelligence
     email: "tleng@shu.edu.cn"
 
 
