--- a/_data/people.yml
+++ b/_data/people.yml
@@ -38,8 +38,8 @@ changhaowu:
 xiaokaizhang:
     display_name: "Xiaokai Zhang"
     webpage: "https://github.com/BitSecret"
-    bio: Graduate student, School of computer engineering and science, Shanghai University
-    role: graduate student
+    bio: Master's Student, School of computer engineering and science, Shanghai University
+    role: Master's Students
     image: img/people/xiaokaizhang.jpg
     email: "xiaokaizhang1999@163.com"
 
