--- a/_data/people.yml
+++ b/_data/people.yml
@@ -38,7 +38,7 @@ changhaowu:
 xiaokaizhang:
     display_name: "Xiaokai Zhang"
     webpage: "https://github.com/BitSecret"
-    bio: Master's Student, School of Computer Engineer and Science, Shanghai University
+    bio: Masters Student, School of Computer Engineer and Science, Shanghai University
     role:  masters
     image: img/people/xiaokaizhang.jpg
     email: "xiaokaizhang1999@163.com"
@@ -46,7 +46,7 @@ xiaokaizhang:
 dengfengyue:
     display_name: "DengFeng Yue"
     webpage: "https://github.com/331368068"
-    bio: Master's Student, School of Computer Engineer and Science, Shanghai University
+    bio: Masters Student, School of Computer Engineer and Science, Shanghai University
     role:  masters
     image: img/people/dengfengyue.jpg
     email: "ydf@shu.edu.cn"
