--- a/_data/people.yml
+++ b/_data/people.yml
@@ -88,6 +88,12 @@ chaojie ni:
     image: img/people/chaojieni.jpeg
 
 
+Chao Yang:
+    display_name: "Chao Yang"
+    role: alumni-masters
+    bio:  Software Engineer, Department of QA, NetEase inc
+    image: img/people/chaoyang.jpeg
+    email: "evanxephon@gmail.com"
 
 
 # undergrads
