--- a/_data/people.yml
+++ b/_data/people.yml
@@ -92,7 +92,7 @@ Chao Yang:
     display_name: "Chao Yang"
     role: alumni-masters
     bio:  Software Engineer, Department of QA, NetEase inc
-    image: img/people/chaoyang.jpeg
+    image: img/people/chaoyang.jpg
     email: "evanxephon@gmail.com"
 
 
