--- a/_data/people.yml
+++ b/_data/people.yml
@@ -50,6 +50,13 @@ dengfengyue:
     role:  masters
     image: img/people/dengfengyue.jpg
     email: "ydf@shu.edu.cn"
+jiazou:
+    display_name: "Jia Zou"
+    webpage: "https://github.com/PersonNoName"
+    bio: Masters Student, School of Computer Engineer and Science, Shanghai University
+    role: masters
+    image: img/people/jiazou.jpg
+    email: "ZouJ@shu.edu.cn"
 
 # undergraduate
 
