--- a/_data/people.yml
+++ b/_data/people.yml
@@ -55,7 +55,7 @@ jiazou:
     webpage: "https://github.com/PersonNoName"
     bio: Masters Student, School of Computer Engineer and Science, Shanghai University
     role: masters
-    image: img/people/jiazou.jpg
+    image: img/people/jiaZou.jpg
     email: "ZouJ@shu.edu.cn"
 
 # undergraduate
