--- a/_data/people.yml
+++ b/_data/people.yml
@@ -38,7 +38,7 @@ changhaowu:
 xiaokaizhang:
     display_name: "Xiaokai Zhang"
     webpage: "https://github.com/BitSecret"
-    bio: Masters Student, School of Computer Engineer and Science, Shanghai University
+    bio: Masters Student, School of Computer Engineer and Science
     role:  masters
     image: img/people/xiaokaizhang.jpg
     email: "xiaokaizhang1999@163.com"
@@ -46,14 +46,14 @@ xiaokaizhang:
 dengfengyue:
     display_name: "DengFeng Yue"
     webpage: "https://github.com/331368068"
-    bio: Masters Student, School of Computer Engineer and Science, Shanghai University
+    bio: Masters Student, School of Computer Engineer and Science
     role:  masters
     image: img/people/dengfengyue.jpg
     email: "ydf@shu.edu.cn"
 jiazou:
     display_name: "Jia Zou"
     webpage: "https://github.com/PersonNoName"
-    bio: Masters Student, School of Computer Engineer and Science, Shanghai University
+    bio: Masters Student, School of Computer Engineer and Science
     role: masters
     image: img/people/JiaZou.jpg
     email: "ZouJ@shu.edu.cn"
@@ -62,8 +62,8 @@ jiazou:
 zhufangzhen:
     display_name: "FangZhen Zhu"
     webpage: "https://github.com/pigsquare"
-    bio: Undergraduate Student, School of Computer Engineer and Science, Shanghai University
-    role:  masters
+    bio: Undergraduate Student, School of Computer Engineer and Science
+    role:  ugrad
     image: img/people/zhufangzhen.jpg
     email: "zhufz@shu.edu.cn"
 
