--- a/_data/people.yml
+++ b/_data/people.yml
@@ -57,6 +57,14 @@ jiazou:
     role: masters
     image: img/people/JiaZou.jpg
     email: "ZouJ@shu.edu.cn"
+    
+ yiminghe:
+    display_name: "YingMing He"
+    webpage: "https://github.com/748978460"
+    bio: Masters Student, School of Computer Engineer and Science
+    role:  masters
+    image: img/people/yiminghe.jpg
+    email: "h748978460@163.com"
 
 # undergraduate
 zhufangzhen:
