--- a/_data/people.yml
+++ b/_data/people.yml
@@ -50,12 +50,13 @@ dengfengyue:
     role:  masters
     image: img/people/dengfengyue.jpg
     email: "ydf@shu.edu.cn"
-zhezhe:
+
+zhezhu:
     display_name: "Zhe Zhu"
     webpage: "https://github.com/331368068"
     bio: Masters Student, School of Computer Engineer and Science, Shanghai University
     role:  masters
-    image: img/people/Zhe Zhu.jpg
+    image: img/people/zhuzhe.jpg
     email: "zhuzhe@shu.edu.cn"
 
 jiazou:
@@ -187,6 +188,11 @@ Chao Yang:
     image: img/people/chaoyang.jpg
     email: "evanxephon@gmail.com"
 
+jielin wan:
+    display_name: "Jielin Wan"
+    role: alumni-masters
+    bio: Mobile engineer, Kernel Development Group, Baidu Inc
+    image: img/people/jielinwang.JPG
 
 # undergrads
 
