--- a/_data/people.yml
+++ b/_data/people.yml
@@ -188,6 +188,13 @@ Chao Yang:
     image: img/people/chaoyang.jpg
     email: "evanxephon@gmail.com"
 
+Zhufu Lu: 
+    display_name: "Zhufu Lu" 
+    role: alumni-masters 
+    bio: Manager,Department of Attract Investment , Lingang Group 
+    image: img/people/zhufulu.jpg 
+    email: "zflu@shlingang.com" 
+ 
 jielin wan:
     display_name: "Jielin Wan"
     role: alumni-masters
