--- a/_data/people.yml
+++ b/_data/people.yml
@@ -194,5 +194,12 @@ jielin wan:
     bio: Mobile engineer, Kernel Development Group, Baidu Inc
     image: img/people/jielinwang.JPG
 
+Zhufu Lu: 
+    display_name: "Zhufu Lu" 
+    role: alumni-masters 
+    bio: Manager,Department of Attract Investment , Lingang Group 
+    image: img/people/zhufulu.jpg 
+    email: "zflu@shlingang.com" 
+
 # undergrads
 
