--- a/_data/people.yml
+++ b/_data/people.yml
@@ -194,5 +194,19 @@ jielin wan:
     bio: Mobile engineer, Kernel Development Group, Baidu Inc
     image: img/people/jielinwang.JPG
 
-# undergrads
+Zhufu Lu: 
+    display_name: "Zhufu Lu" 
+    role: alumni-masters 
+    bio: Manager,Department of Attract Investment , Lingang Group 
+    image: img/people/zhufulu.jpg 
+    email: "zflu@shlingang.com" 
+
+Yu Wang:
+    display_name: "Yu Wang"
+    role: alumni-masters
+    bio: Software Engineer，5G development department，Huawei inc
+    image: img/people/yuwang.JPG
+    
+
+# undergrads 
 
