--- a/_data/people.yml
+++ b/_data/people.yml
@@ -146,7 +146,7 @@ runanwang:
 
 tanrongwei:
     display_name: "Tanrong Wei"
-    webpage: "https://github.com/59680"
+    webpage: "https://github.com/FiFionaW"
     bio: Masters Student, School of Science
     role:  masters
     image: img/people/tanrongwei.JPG
