--- a/_data/people.yml
+++ b/_data/people.yml
@@ -149,7 +149,7 @@ tanrongwei:
     webpage: "https://github.com/FiFionaW"
     bio: Masters Student, School of Science
     role:  masters
-    image: img/people/tanrongwei.JPG
+    image: img/people/tanrongwei.jpg
     email: "trongwei@163.com"
 
 
