--- a/_data/people.yml
+++ b/_data/people.yml
@@ -61,7 +61,7 @@ dengfengyue:
 
 zhezhu:
     display_name: "Zhe Zhu"
-    webpage: "https://github.com/331368068"
+    webpage: "https://github.com/zz863474396"
     bio: Masters Student, School of Computer Engineer and Science, Shanghai University
     role:  masters
     image: img/people/zhuzhe.jpg
