--- a/_data/people.yml
+++ b/_data/people.yml
@@ -138,7 +138,7 @@ yifanwang:
     
 runanwang:
     display_name: "RuNan Wang"
-    webpage: "https://github.com/munan0611"
+    webpage: "https://github.com/RunanW"
     bio: Masters Student, School of Computer Engineer and Science
     role:  masters
     image: img/people/runanwang.jpg
