--- a/_data/software.yml
+++ b/_data/software.yml
@@ -1,9 +1,8 @@
-OmegaProof_v1:
-  title: "OmegaProof_v1"
-  link: "https://github.com/OmegaProof_v1"
-  description: "An end to end autonomous proof net for Eculid Geometry Problem"
-  image: img/software-image/OOP-v1.png
-  year: 2021
+FormalGeo:
+  title: "FormalGeo-SAT"
+  link: "https://github.com/BitSecret/FormalGeo-SAT"
+  description: "Formal representation and solving for SAT-level Euclidean plane geometry problems."
+  image: img/software-image/FormalGeo-SAT.png
+  year: 2023
   authors: "Tuo Leng, Xiaokai Zhang, etc"
-
   
