--- a/_data/people.yml
+++ b/_data/people.yml
@@ -71,7 +71,7 @@ jia zou:
     email: "ZouJ@shu.edu.cn"
     
 yiming he:
-    display_name: "Yingming He"
+    display_name: "Yiming He"
     webpage: "https://github.com/748978460"
     bio: Masters Student, School of Computer Engineer and Science
     role:  masters
@@ -86,21 +86,13 @@ chenyang mao:
     image: img/people/chenyangmao.jpg
     email: "shadymao@shu.edu.com"
     
-guoyan jun:
+yanjun guo:
     display_name: "Yanjun Guo"
     webpage: "https://github.com/g826796047"
     bio: Masters Student, School of Computer Engineer and Science
     role: masters
     image: img/people/yanjunguo.jpg
     email: "yanjunguo@163.com"
-
-yiming he:
-    display_name: "Yingming He"
-    webpage: "https://github.com/748978460"
-    bio: Masters Student, School of Computer Engineer and Science
-    role: masters
-    image: img/people/yiminghe.jpg
-    email: "h748978460@163.com"
 
 xiaoxiao jin:
     display_name: "Xiaoxiao Jin"
