--- a/_data/people.yml
+++ b/_data/people.yml
@@ -58,7 +58,7 @@ zhe zhu:
     display_name: "Zhe Zhu"
     webpage: "https://github.com/zz863474396"
     bio: Masters Student, School of Computer Engineer and Science
-    role:  masters
+    role: masters
     image: img/people/zhuzhe.jpg
     email: "zhuzhe@shu.edu.cn"
 
@@ -74,7 +74,7 @@ yiming he:
     display_name: "Yiming He"
     webpage: "https://github.com/748978460"
     bio: Masters Student, School of Computer Engineer and Science
-    role:  masters
+    role: masters
     image: img/people/yiminghe.jpg
     email: "h748978460@163.com"
     
@@ -82,7 +82,7 @@ chenyang mao:
     display_name: "Chenyang Mao"
     webpage: "https://github.com/shadymcy"
     bio: Masters Student, School of Computer Engineer and Science
-    role:  masters
+    role: masters
     image: img/people/chenyangmao.jpg
     email: "shadymao@shu.edu.com"
     
@@ -139,8 +139,17 @@ cheng qin:
     webpage: "https://github.com/Vench115"
     bio: Masters Student, School of Future Technology
     role: masters
-    image:
+    image: img/people/chengqin.jpg
     email: "qcwork9@163.com"
+
+zhengyu hu:
+    display_name: "Zhengyu hu"
+    webpage: "http://euclidesprobationem.github.io/"
+    bio: Masters Student, School of Computer Engineer and Science
+    role: masters
+    image:
+    email: ""
+    
 
 
 
