--- a/_data/people.yml
+++ b/_data/people.yml
@@ -144,7 +144,7 @@ cheng qin:
 
 zhengyu hu:
     display_name: "Zhengyu hu"
-    webpage: "http://euclidesprobationem.github.io/"
+    webpage: "https://github.com/huzhengyu2016"
     bio: Masters Student, School of Computer Engineer and Science
     role: masters
     image:
