--- a/_data/people.yml
+++ b/_data/people.yml
@@ -147,8 +147,8 @@ zhengyu hu:
     webpage: "https://github.com/huzhengyu2016"
     bio: Masters Student, School of Computer Engineer and Science
     role: masters
-    image:
-    email: ""
+    image: img/people/zhengyuhu.jpg
+    email: "huzhengyu2016@gmail.com"
     
 
 
