update xiaokai's profile and project FormalGeo

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -45,7 +45,7 @@ changhaowu:
 
 xiaokaizhang:
     display_name: "Xiaokai Zhang"
-    webpage: "https://github.com/BitSecret"
+    webpage: "https://bitsecret.github.io/"
     bio: Masters Student, School of Computer Engineer and Science
     role:  masters
     image: img/people/xiaokaizhang.jpg
